# Practice_NestedCompose

./: .env  compose.override.yaml  compose.yaml  compose.yml  workspace.code-workspace
apps/adk/: Dockerfile  alembic.ini  pyproject.toml
apps/adk/.devcontainer/: compose.override.yml  devcontainer.json
apps/adk/apps/applications/agent/dto/: __init__.py  agent_dto.py
apps/adk/apps/applications/agent/mapper/: __init__.py  mapper.py  mapper_agent.py
apps/adk/apps/applications/agent/ports/: __init__.py  agent_repository.py  repository_agent.py
apps/adk/apps/applications/agent/services/: __init__.py  service_agent.py
apps/adk/apps/applications/agent/usecases/: __init__.py  create_agent.py  delete_agent.py  serach_agent.py  serach_agent_list.py  serach_list_agent.py  update_agent.py
apps/adk/apps/applications/chat/usecases/: chat.py
apps/adk/apps/applications/health/services/: health_check.py
apps/adk/apps/applications/usecases/: create_session.py
apps/adk/apps/domain/agent/: __init__.py  entity_agent.py  types.py  value_objects.py
apps/adk/apps/domain/session/: __init__.py  value_object_session.py
apps/adk/apps/infrastructure/health/: health_repository.py
apps/adk/apps/presentation/: api.py  dependency.py  routers.py
apps/adk/apps/presentation/router/: routers.py
apps/adk/apps/presentation/schemas/: sessions.py
apps/adk/apps/tools/: __init__.py
apps/adk/migrations/: env.py
apps/adk/migrations/versions/: 45a7b6ac44e1_Create_ADK_Tables.py  45a7b6ac44e1_create_tables.py  a8e073b8d637_Create_Agents_Table.py
apps/application_1/: Dockerfile  (+3 more)
(+88 files in other folders)
